--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,12 @@
-/* // fonts
-$font-main: 'Roboto', sans-serif;
+// fonts
+$font-text: "Poppins-SemiBold" sans-serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999; */
+$color-light-grey: #f0ebe5;
+$color-light-orange: #ff975a;
+$color-green: #0c474b;
+$color-grey: #b6c8c9;
+$color-white: #ffff;
+
+// image background
+$headerImage: url(./assets/images/logo.png);
