--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,4 +1,4 @@
-/*.main__list {
-  padding-left: 2rem;
-  padding-bottom: 20px;
-}*/
+:root {
+  font-size: 16px;
+  font-family: "Poppins-SemiBold" sans-serif;
+}
