complete partials and images

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -26,8 +26,8 @@
         </div>
 
         <div>
-        <img src="./assets/images/icon_3.png" alt="">
-        <h3>Guía </h3>
+        <img src="./assets/images/icon_3.png" alt="icon of a counselling poster">
+        <h3>Guía</h3>
         <p>Soporte y asesoramiento para ayudarte con yu objetivo </p>
         </div>
           
@@ -35,16 +35,28 @@
 
 
 
-    
-    
+    <section class="section3">
+        <img src="./assets/images/icon_4.png" alt="icon of a delivery van">
+    <h4>Envío gratis garantizado </h4>
+    <p>Envío gratis en compras desde 100</p>
+    <p>Comprar ahora</p>
+     
+    </section>
+
+    <section class="section4">
+        <div>
+         <h2>Disfruta creando espacios</h2>
+         <p>Una linea de productos diseñados para todos tus espacios</p>
+
+         <div>
+            <div class="button">
+                <input class="button__buy" type="submit" value="Comprar ahora" />
+            </div>
+         </div>
+    </div>
+    <div>
+        <img src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
+    </div>
+    </section>
    
-    
-    img 
-    Envío gratis garantizado 
-    Envío gratis en compras desde 100
-    Compra ahora 
-    
-    Disfruta creando espacios
-    Una lñinea de productos diseñados para todos tus espacios
-    BOTÓN Comprar ahora
       </main>
