structure html and class done

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,35 +1,44 @@
 <footer class="footer">
     <div class="footer__items">
        <h3 class="items__title">Tienda</h3>
-       <span class="items__span">
-        Productos
-        Cajoneras
-        Para toda la casa 
-        Habitaciones
-       </span>
-     
+        <ul class="items__link">
+            <li><a class="link__p" href="https://adalab.es" target="_blank">Productos</a></li>
+            <li><a class="link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
+            <li><a class="link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
+             <li><a class="link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
+            </ul>
     </div>
+
     <div class="footer__items">
-        <h3 class="items__title">Nosotros</h3>
-        <span class="items__span"> 
-        Nuestra guía 
-        Nuestro diseño 
-        Nuesta historia 
-        Ayuda   
-        </span>
-      
-      
+        <h3 class="items__title">Nosotros</h3> 
+        <ul class="items__link">
+            <li><a class="link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
+            <li><a class="link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
+            <li><a class="link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
+             <li><a class="link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
+            </ul>
+
     </div>
+
     <div class="footer__items">
         <h3 class="items__title">Contacto</h3>
-        <span>
-        ayuda@openspaces.com 
-        Socios    
-        </span>
-    
+        <ul class="items__link">
+        <li><a class="link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
+        <li><a class="link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
+        </ul>
     </div>
     
-    <div>
-      ICONOS LONKEDIN INSTAGRAM TWITTER  
+    <div class="footer__items">
+        <nav>
+        <ul class="social-nav">
+            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        </ul> 
+        </nav>
     </div> 
+
+    <div class="footer__items__arrow">
+        <a href="./index.html#header"><img src="./images/arrow_up.svg" alt="Arrow pointing upwards" /></a>
+    </div>
     </footer>
