--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,62 +1,51 @@
 <main>
+    <!-- SECTION 1 MODULO 2 GRIDD-->
 
     <section class="section1">
-        <h2 class="section1__title">Disfruta creando espacios</h2>
-        <div class="button">
-            <input class="button__buy" type="submit" value="Comprar ahora" />
-        </div>
+            <h2 class="section1__title">Volverse organizado se siente mejor con OPEN SPACES</h2>
+
+            <article class="section1__box">
+                <img class="section1__photo" src="./assets/images/icon_1.png" alt="icon of a table with objects">
+                    <h3 class="section1__item1__subtitle">Lo que necesitas </h3>
+                    <p class="section1__item1__p">Una línea de productos diseñados para todos tus espacios</p>
+            </article>
+
+            <article class="section1__box">
+                <img class="section1__photo" src="./assets/images/icon_2.png" alt="icon of a recycling bag">
+                    <h3 class="section1__item1__subtitle">Materia primas sustentables</h3>
+                    <p class="section1__item1__p">Una línea de productos diseñados para todos tus espacios</p>
+            </article>
+
+
+            <article class="section1__box">
+                <img class="section1__photo" src="./assets/images/icon_3.png" alt="icon of a counselling poster">
+                    <h3 class="section1__item1__subtitle">Guía</h3>
+                    <p class="section1__item1__p">Soporte y asesoramiento para ayudarte con yu objetivo </p>
+            </article>
     </section>
-   
+
+    <!-- SECTION 2 MODULO 3 FLEX-->
 
     <section class="section2">
-        <div>
-            <h2>Volverse organizado se siente mejor con OPEN SPACES</h2>
-        </div>
-
-        <div>
-        <img src="./assets/images/icon_1.png" alt="icon of a table with objects">
-        <h3>Lo que necesitas </h3>
-        <p>Una línea de productos diseñados para todos tus espacios</p>
-        </div>
-
-        <div>
-        <img src="./assets/images/icon_2.png" alt="icon of a recycling bag">
-        <h3>Materia primas sustentables</h3>
-        <p>Una línea de productos diseñados para todos tus espacios</p>
-        </div>
-
-        <div>
-        <img src="./assets/images/icon_3.png" alt="icon of a counselling poster">
-        <h3>Guía</h3>
-        <p>Soporte y asesoramiento para ayudarte con yu objetivo </p>
-        </div>
-          
+        <article class="section2__box">
+            <img class="section2__photo" src="./assets/images/icon_4.png" alt="icon of a delivery van">
+                <h2 class="section2__title">Envío gratis garantizado </h2>
+                <p class="section2__item1__p">Envío gratis en compras desde 100</p>
+                <p class="section2__item1__p"> Comprar ahora</p>
+        </article>
     </section>
-
-
+    <!-- SECTION 3 MODULO 4 FLEX-->
 
     <section class="section3">
-        <img src="./assets/images/icon_4.png" alt="icon of a delivery van">
-    <h4>Envío gratis garantizado </h4>
-    <p>Envío gratis en compras desde 100</p>
-    <p>Comprar ahora</p>
-     
+        <article class="section3__box">
+                <h2 class="section3__title">Disfruta creando espacios</h2>
+                <p class="section3__item1__p">Una linea de productos diseñados para todos tus espacios</p>
+                <input class="button" type="submit" value="Comprar ahora" />
+        </article>
+
+        <div class="image">
+            <img class="image__home" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
+        </div>
     </section>
 
-    <section class="section4">
-        <div>
-         <h2>Disfruta creando espacios</h2>
-         <p>Una linea de productos diseñados para todos tus espacios</p>
-
-         <div>
-            <div class="button">
-                <input class="button__buy" type="submit" value="Comprar ahora" />
-            </div>
-         </div>
-    </div>
-    <div>
-        <img src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
-    </div>
-    </section>
-   
-      </main>
+</main>
