--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,22 +1,26 @@
 <header class="header"> 
-    <nav class="header-container">
-      <div class="header__nav__logo">
-        <img src="./assets/images/logo.png" alt="Professional Logo" class="logo">
-      </div>
-
-      <div class="header__nav__menu">
-        <input type="checkbox" id="check">
-            <label for="check" class="bar-button">
-                <i class="fas fa·bars"></i>
-            </label>
-            <ul class="list-nav">
+    <section class="header1">
+      <nav class="header__nav__menu">
+        <a class="nav__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
+          
+            <!--<ul class="list-nav">
                 <li class="item-nav"><a href="#">Productos</a></li>
                 <li class="item-nav"><a href="#">Colecciones </a></li>
                 <li class="item-nav"><a href="#">Tienda</a></li>
                 <li class="item-nav"><a href="#">Inicio </a></li>
-            </ul>
-      </div>
-    </nav>
- </header>
+            </ul> -->
+      </nav>
 
- <!-- preguntar mañana por si podemos meter un menu hamburguesa en un div aparte-->
+      <div class="header__nav__logo">
+        <img src="./assets/images/logo.png" alt="Professional Logo" class="logo">
+      </div>
+    </section>
+
+    <section class="header2">
+      <h2 class="header2__title">Disfruta creando espacios</h2>
+      <div class="header__button">
+          <input class="button__buy" type="submit" value="Comprar ahora" />
+      </div>
+  </section>
+
+ </header>
