changes in partilas class, scss, and menu burguer

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header"> 
     <section class="header1">
-      <nav class="header__nav__menu">
-        <a class="nav__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
+      <nav class="header1__menu">
+        <a class="header1__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
           
             <!--<ul class="list-nav">
                 <li class="item-nav"><a href="#">Productos</a></li>
@@ -18,9 +18,8 @@
 
     <section class="header2">
       <h2 class="header2__title">Disfruta creando espacios</h2>
-      <div class="header__button">
-          <input class="button__buy" type="submit" value="Comprar ahora" />
-      </div>
+      <input class="header2__button" type="submit" value="Comprar ahora" />
+
   </section>
 
  </header>
