--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,44 +1,42 @@
 <footer class="footer">
     <div class="footer__items">
-       <h3 class="items__title">Tienda</h3>
-        <ul class="items__link">
-            <li><a class="link__p" href="https://adalab.es" target="_blank">Productos</a></li>
-            <li><a class="link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
-            <li><a class="link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
-             <li><a class="link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
+       <h3 class="footer__items__title">Tienda</h3>
+        <ul class="footer__items__link">
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
+             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
             </ul>
     </div>
 
     <div class="footer__items">
-        <h3 class="items__title">Nosotros</h3> 
-        <ul class="items__link">
-            <li><a class="link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
-            <li><a class="link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
-            <li><a class="link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
-             <li><a class="link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
+        <h3 class="footer__items__title">Nosotros</h3> 
+        <ul class="footer__items__link">
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
+            <li><a class="footer__items__link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
+             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
             </ul>
 
     </div>
 
     <div class="footer__items">
-        <h3 class="items__title">Contacto</h3>
-        <ul class="items__link">
-        <li><a class="link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
-        <li><a class="link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
+        <h3 class="footer__items__title">Contacto</h3>
+        <ul class="footer__items__link">
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
+            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
         </ul>
-    </div>
     
-    <div class="footer__items">
-        <nav>
-        <ul class="social-nav">
-            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a class="social-nav__link" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        <ul class="footer__items__icon">
+            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul> 
-        </nav>
     </div> 
 
-    <div class="footer__items__arrow">
-        <a href="./index.html#header"><img src="./images/arrow_up.svg" alt="Arrow pointing upwards" /></a>
+    <div class="footer__arrow">
+        <a href="#">
+    <i class="fa-solid fa-arrow-up" alt="Arrow pointing upwards"></i></a>
+    
     </div>
     </footer>
