--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -28,21 +28,24 @@
 
     <section class="section2">
         <article class="section2__box">
-            <img class="section2__photo" src="./assets/images/icon_4.png" alt="icon of a delivery van">
-                <h2 class="section2__title">Envío gratis garantizado </h2>
-                <p class="section2__item1__p">Envío gratis en compras desde 100</p>
-                <p class="section2__item1__p"> Comprar ahora</p>
+            <img src="./assets/images/icon_4.png" alt="icon of a delivery van">
+                <h2 class="section2__box__title">Envío gratis garantizado </h2>
+                <p class="section2__box__subtitle">Envío gratis en compras desde 100</p>
+                <p class="section2__box__p"> Comprar ahora</p>
         </article>
     </section>
     <!-- SECTION 3 MODULO 4 FLEX-->
 
     <section class="section3">
         <article class="section3__box">
-                <h2 class="section3__title">Disfruta creando espacios</h2>
-                <p class="section3__item1__p">Una linea de productos diseñados para todos tus espacios</p>
-                <input class="button" type="submit" value="Comprar ahora" />
+                <h2 class="section3__box__title">Disfruta creando espacios</h2>
+                <p class="section3__box__p">Una linea de productos diseñados para todos tus espacios</p>
+                <input class="section3__box__button" type="submit" value="Comprar ahora" />
         </article>
 
+    </section>    
+
+    <section>
         <div class="image">
             <img class="image__home" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
         </div>
