--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -5,3 +5,34 @@ header {
   background-size: cover;
   background-position-y: 25%;
 }
+
+.header1 {
+  display: flex;
+  position: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.header2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  &__title {
+    color: #0c474b;
+    font-size: 24px;
+  }
+
+  &__button {
+    background-color: #0c474b;
+    color: #ffff;
+    display: flex;
+    font-size: 16px;
+    width: 176px;
+    height: 48px;
+    padding: 12px 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    appearance: none;
+  }
+}
