scss changes in header and main

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+<div class="wrap"> 
     <div class="footer__items">
        <h3 class="footer__items__title">Tienda</h3>
         <ul class="footer__items__link">
@@ -37,6 +38,6 @@
     <div class="footer__arrow">
         <a href="#">
     <i class="fa-solid fa-arrow-up" alt="Arrow pointing upwards"></i></a>
-    
     </div>
+</div>
     </footer>
