--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,24 +1,25 @@
 <header class="header"> 
-    <section class="header1">
-      <nav class="header1__menu">
-        <a class="header1__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
+  <div class="wrap">
+    <section class="section-nav">
+      <nav class="section-nav__menu">
+        <a class="section-nav__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
           
-            <!--<ul class="list-nav">
-                <li class="item-nav"><a href="#">Productos</a></li>
-                <li class="item-nav"><a href="#">Colecciones </a></li>
-                <li class="item-nav"><a href="#">Tienda</a></li>
-                <li class="item-nav"><a href="#">Inicio </a></li>
-            </ul> -->
+        <ul class="section-nav__menu__list" style="display:none;"> <!-- Ocultar elemento-->
+                <li class="section-nav__list__item"><a href="#">Productos</a></li>
+                <li class="section-nav__list__item"><a href="#">Colecciones </a></li>
+                <li class="section-nav__list__item"><a href="#">Tienda</a></li>
+                <li class="section-nav__list__item"><a href="#">Inicio </a></li>
+          </ul> 
       </nav>
+    </section> 
+    
+  <section class="section-items" >
 
-      <div class="header__nav__logo">
-        <img src="./assets/images/logo.png" alt="Professional Logo" class="logo">
-      </div>
-    </section>
-
-    <section class="header2">
-      <h2 class="header2__title">Disfruta creando espacios</h2>
-      <input class="header2__button" type="submit" value="Comprar ahora" />
+    <img src="./assets/images/logo.png" alt="Professional Logo" class="section-items__logo">
+    
+    <h2 class="section-items__title">Disfruta creando espacios</h2>
+  
+    <input class="section-items__button" value="Comprar ahora"/>
 
   </section>
 
