--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,6 +2,7 @@
     <!-- SECTION 1 MODULO 2 GRIDD-->
 
     <section class="section1">
+        <div class="wrap">
             <h2 class="section1__title">Volverse organizado se siente mejor con OPEN SPACES</h2>
 
             <article class="section1__box">
@@ -22,33 +23,38 @@
                     <h3 class="section1__item1__subtitle">Guía</h3>
                     <p class="section1__item1__p">Soporte y asesoramiento para ayudarte con yu objetivo </p>
             </article>
+        </div>    
     </section>
 
     <!-- SECTION 2 MODULO 3 FLEX-->
 
     <section class="section2">
+        <div class="wrap">
         <article class="section2__box">
-            <img src="./assets/images/icon_4.png" alt="icon of a delivery van">
+            <img class="section2__box__image" src="./assets/images/icon_4.png" alt="icon of a delivery van">
                 <h2 class="section2__box__title">Envío gratis garantizado </h2>
                 <p class="section2__box__subtitle">Envío gratis en compras desde 100</p>
                 <p class="section2__box__p"> Comprar ahora</p>
         </article>
+        </div>
     </section>
     <!-- SECTION 3 MODULO 4 FLEX-->
 
     <section class="section3">
+        <div class="wrap">
         <article class="section3__box">
                 <h2 class="section3__box__title">Disfruta creando espacios</h2>
                 <p class="section3__box__p">Una linea de productos diseñados para todos tus espacios</p>
-                <input class="section3__box__button" type="submit" value="Comprar ahora" />
+                <input class="section3__box__button" type="submit" value="Comprar ahora">
         </article>
-
+        </div>
     </section>    
 
     <section>
+    <div class="wrap"> 
         <div class="image">
             <img class="image__home" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
         </div>
     </section>
-
+    </div>  
 </main>
