--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -4,25 +4,37 @@
 
 .section2 {
   background-color: #ff975a;
-
   &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__image {
+      width: 120px;
+      height: 120px;
+      padding: 12.5px 4px 8px;
+      margin-top: 46px;
+      margin-bottom: 10px;
+    }
+
     &__title {
       color: #ffff;
       font-size: 24px;
+      font-weight: 600;
     }
 
     &__subtitle {
       color: #ffff;
       font-size: 14px;
+      padding: 0 46px 0 51px;
     }
 
     &__p {
       color: #ffff;
       font-size: 16px;
       text-decoration: underline;
+      margin-top: 20px;
+      margin-bottom: 51px;
     }
   }
 }
@@ -45,20 +57,23 @@
 
     &__p {
       color: #ffff;
-      font-size: 16px;
+      font-size: 14px;
     }
 
     &__button {
       background-color: #0c474b;
       color: #ffff;
-      display: flex;
       font-size: 16px;
       width: 176px;
       height: 48px;
+      font-weight: 600;
       padding: 12px 24px;
-      text-transform: uppercase;
-      text-decoration: none;
-      appearance: none;
+      margin: 24px 119px 0 62px;
+      transition: all 0.9s;
+      &:hover {
+        background-color: rgb(245, 245, 128);
+        color: grey;
+      }
     }
   }
 }
