--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -2,3 +2,14 @@
   font-size: 16px;
   font-family: "Poppins-SemiBold" sans-serif;
 }
+
+.wrap {
+  margin: 0 15px 0 15px;
+  width: 90%;
+  @media all and (min-width: 768px) {
+    margin: 0 45px 0 45px;
+  }
+  @media all and (min-width: 1200px) {
+    margin: 0 138px 0 138px;
+  }
+}
