new changes grid and paddings

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 <div class="wrap"> 
-    <div class="footer__items">
+    <section class="footer__items">
        <h3 class="footer__items__title">Tienda</h3>
         <ul class="footer__items__link">
             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
@@ -8,9 +8,9 @@
             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
              <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
             </ul>
-    </div>
+    </section>
 
-    <div class="footer__items">
+    <section class="footer__items">
         <h3 class="footer__items__title">Nosotros</h3> 
         <ul class="footer__items__link">
             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
@@ -19,25 +19,26 @@
              <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
             </ul>
 
-    </div>
+    </section>
 
-    <div class="footer__items">
+    <section class="footer__items">
         <h3 class="footer__items__title">Contacto</h3>
         <ul class="footer__items__link">
             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
         </ul>
-    
+
         <ul class="footer__items__icon">
             <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
             <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul> 
-    </div> 
+</section>
 
-    <div class="footer__arrow">
-        <a href="#">
+<section class="footer__arrow" >
+      <a href="#">
     <i class="fa-solid fa-arrow-up" alt="Arrow pointing upwards"></i></a>
-    </div>
+</section>
+ 
 </div>
     </footer>
