--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,22 +6,22 @@
             <h2 class="section1__title">Volverse organizado se siente mejor con OPEN SPACES</h2>
 
             <article class="section1__box">
-                <img class="section1__photo" src="./assets/images/icon_1.png" alt="icon of a table with objects">
-                    <h3 class="section1__item1__subtitle">Lo que necesitas </h3>
-                    <p class="section1__item1__p">Una línea de productos diseñados para todos tus espacios</p>
+                <img class="section1__box__photo" src="./assets/images/icon_1.png" alt="icon of a table with objects">
+                    <h3 class="section1__box__subtitle">Lo que necesitas </h3>
+                    <p class="section1__box__p">Una línea de productos diseñados para todos tus espacios</p>
             </article>
 
             <article class="section1__box">
-                <img class="section1__photo" src="./assets/images/icon_2.png" alt="icon of a recycling bag">
-                    <h3 class="section1__item1__subtitle">Materia primas sustentables</h3>
-                    <p class="section1__item1__p">Una línea de productos diseñados para todos tus espacios</p>
+                <img class="section1__box__photo" src="./assets/images/icon_2.png" alt="icon of a recycling bag">
+                    <h3 class="section1__box__subtitle">Materia primas sustentables</h3>
+                    <p class="section1__box__p">Una línea de productos diseñados para todos tus espacios</p>
             </article>
 
 
             <article class="section1__box">
-                <img class="section1__photo" src="./assets/images/icon_3.png" alt="icon of a counselling poster">
-                    <h3 class="section1__item1__subtitle">Guía</h3>
-                    <p class="section1__item1__p">Soporte y asesoramiento para ayudarte con yu objetivo </p>
+                <img class="section1__box__photo" src="./assets/images/icon_3.png" alt="icon of a counselling poster">
+                    <h3 class="section1__box__subtitle">Guía</h3>
+                    <p class="section1__box__p">Soporte y asesoramiento para ayudarte con tu objetivo </p>
             </article>
         </div>    
     </section>
@@ -50,11 +50,9 @@
         </div>
     </section>    
 
-    <section>
+    <section class="section4">
     <div class="wrap"> 
-        <div class="image">
-            <img class="image__home" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
-        </div>
+            <img class="section4__image" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
     </section>
     </div>  
 </main>
