--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -2,6 +2,50 @@
   font-family: "Poppins", roboto;
 }
 
+.section1 {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 1fr;
+  background-color: #f0ebe5;
+  color: #0c474b;
+
+  &__title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 41px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 37px;
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+
+    &__photo {
+      padding-bottom: 47px;
+    }
+
+    &__subtitle {
+      font-size: 20px;
+      width: 208px;
+      height: 50px;
+      text-align: center;
+    }
+
+    &__p {
+      font-size: 16px;
+      width: 208px;
+      height: 96px;
+      text-align: center;
+    }
+  }
+}
+
 .section2 {
   background-color: #ff975a;
   &__box {
@@ -21,6 +65,7 @@
       color: #ffff;
       font-size: 24px;
       font-weight: 600;
+      padding-bottom: 10px;
     }
 
     &__subtitle {
@@ -40,10 +85,7 @@
 }
 
 .section3 {
-  background-color: #b6c8c9;
-  justify-content: center;
-  align-items: center;
-
+  background-color: #f0ebe5;
   &__box {
     display: flex;
     flex-direction: column;
@@ -51,12 +93,15 @@
     justify-content: center;
 
     &__title {
-      color: #ffff;
+      color: #0c474b;
       font-size: 24px;
+      font-weight: 600;
+      margin-top: 87px;
+      margin-bottom: 10px;
     }
 
     &__p {
-      color: #ffff;
+      color: #0c474b;
       font-size: 14px;
     }
 
@@ -68,12 +113,19 @@
       height: 48px;
       font-weight: 600;
       padding: 12px 24px;
-      margin: 24px 119px 0 62px;
+      margin: 24px 119px 0 119px;
+      margin-bottom: 92px;
       transition: all 0.9s;
       &:hover {
         background-color: rgb(245, 245, 128);
-        color: grey;
+        color: #0c474b;
       }
     }
   }
+}
+
+.section4 {
+  display: flex;
+  flex-direction: column;
+  background-color: url("../images/creando-espacios.jpg");
 }
