transitions, images and paddings changes

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -32,7 +32,7 @@
         <div class="wrap">
         <article class="section2__box">
             <img class="section2__box__image" src="./assets/images/icon_4.png" alt="icon of a delivery van">
-                <h2 class="section2__box__title">Envío gratis garantizado </h2>
+                <h2 class="animate__animated animate__bounce" class="section2__box__title">Envío gratis garantizado </h2>
                 <p class="section2__box__subtitle">Envío gratis en compras desde 100</p>
                 <p class="section2__box__p"> Comprar ahora</p>
         </article>
@@ -47,6 +47,9 @@
                 <p class="section3__box__p">Una linea de productos diseñados para todos tus espacios</p>
                 <input class="section3__box__button" type="submit" value="Comprar ahora">
         </article>
+
+
+
         </div>
     </section>    
 
