--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -46,6 +46,12 @@
   }
 }
 
+/* @media all and (min-width: 768px) {
+    
+    }
+    
+    */
+
 .section2 {
   background-color: #ff975a;
   &__box {
@@ -66,6 +72,8 @@
       font-size: 24px;
       font-weight: 600;
       padding-bottom: 10px;
+      animation-duration: 3s;
+      animation-delay: 2s;
     }
 
     &__subtitle {
@@ -124,8 +132,19 @@
   }
 }
 
+/*@media all and (min-width: 768px) {
+    
+} */
+
 .section4 {
-  display: flex;
-  flex-direction: column;
-  background-color: url("../images/creando-espacios.jpg");
+  &__image {
+    align-content: stretch;
+    overflow: hidden;
+    object-fit: cover;
+    width: 100%;
+  }
 }
+
+/*@media all and (min-width: 768px) {
+    
+} */
