npm run docs first time done

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -46,7 +46,7 @@ header {
 
   &__button {
     background-color: #0c474b;
-    color: #ffff;
+    color: white;
     font-size: 16px;
     width: 176px;
     height: 48px;
