--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -7,3 +7,4 @@ $color-light-orange: #ff975a;
 $color-green: #0c474b;
 $color-grey: #b6c8c9;
 $color-white: #ffff;
+$color-light-yellow: rgb(245, 245, 128);
