--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -35,7 +35,7 @@ footer {
   }
 
   &__icon {
-    color: #ffff;
+    color: white;
     width: 24px;
     height: 26px;
     display: flex;
@@ -52,7 +52,7 @@ footer {
   width: 24px;
   height: 24px;
   &__a {
-    color: #ffff;
+    color: white;
     background-color: white;
     text-decoration: none;
     list-style: none;
