--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -16,7 +16,7 @@
     margin-top: 41px;
     margin-left: 30px;
     margin-right: 30px;
-    margin-bottom: 37px;
+    margin-bottom: 30px;
   }
 
   &__box {
@@ -68,7 +68,7 @@
     }
 
     &__title {
-      color: #ffff;
+      color: white;
       font-size: 24px;
       font-weight: 600;
       padding-bottom: 10px;
@@ -77,13 +77,13 @@
     }
 
     &__subtitle {
-      color: #ffff;
+      color: white;
       font-size: 14px;
       padding: 0 46px 0 51px;
     }
 
     &__p {
-      color: #ffff;
+      color: white;
       font-size: 16px;
       text-decoration: underline;
       margin-top: 20px;
@@ -93,7 +93,7 @@
 }
 
 .section3 {
-  background-color: #f0ebe5;
+  background-color: #b6c8c9;
   &__box {
     display: flex;
     flex-direction: column;
@@ -115,7 +115,7 @@
 
     &__button {
       background-color: #0c474b;
-      color: #ffff;
+      color: white;
       font-size: 16px;
       width: 176px;
       height: 48px;
