--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,44 +1,44 @@
 <footer class="footer">
 <div class="wrap"> 
-    <section class="footer__items">
-       <h3 class="footer__items__title">Tienda</h3>
-        <ul class="footer__items__link">
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
-             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
+    <div class="container">
+    <nav class="container__items">
+       <h3 class="container__items__title">Tienda</h3>
+        <ul class="container__items__link">
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
+             <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
             </ul>
-    </section>
+    </nav>
 
-    <section class="footer__items">
-        <h3 class="footer__items__title">Nosotros</h3> 
-        <ul class="footer__items__link">
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
-            <li><a class="footer__items__link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
-             <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
+    <nav class="container__items">
+        <h3 class="container__items__title">Nosotros</h3> 
+        <ul class="container__items__link">
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
+            <li><a class="container__items__link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
+             <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
             </ul>
+    </nav>
 
-    </section>
-
-    <section class="footer__items">
-        <h3 class="footer__items__title">Contacto</h3>
-        <ul class="footer__items__link">
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
-            <li><a class="footer__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
+    <nav class="container__items">
+        <h3 class="container__items__title">Contacto</h3>
+        <ul class="container__items__link">
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
+            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
         </ul>
 
-        <ul class="footer__items__icon">
-            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a class="footer__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        <ul class="container__items__icon">
+            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul> 
-</section>
-
-<section class="footer__arrow" >
-      <a href="#">
-    <i class="fa-solid fa-arrow-up" alt="Arrow pointing upwards"></i></a>
-</section>
- 
+</nav>
 </div>
+
+
+    <a href="#"><i class="fa-solid fa-arrow-up" class="icon-arrow" alt="Arrow pointing upwards"></i></a>
+
+ 
+
     </footer>
