--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -3,15 +3,20 @@
     <section class="section-nav">
       <nav class="section-nav__menu">
         <a class="section-nav__menu__burguer" href="https://adalab.es"><i class="fa-solid fa-bars"></i></a>
-          
-        <ul class="section-nav__menu__list" style="display:none;"> <!-- Ocultar elemento-->
-                <li class="section-nav__list__item"><a href="#">Productos</a></li>
-                <li class="section-nav__list__item"><a href="#">Colecciones </a></li>
-                <li class="section-nav__list__item"><a href="#">Tienda</a></li>
-                <li class="section-nav__list__item"><a href="#">Inicio </a></li>
-          </ul> 
       </nav>
     </section> 
+
+    <section class="section-menu">
+      <nav class="menu-nav">
+      <ul class="menu-nav__list" > <!-- Ocultar elemento-->
+        <li class="menu-nav__list___items"><a href="#">Productos</a></li>
+        <li class="manu-nav__list__items"><a href="#">Colecciones </a></li>
+        <li class="menu-nav__list__items"><a href="#">Tienda</a></li>
+        <li class="menu-nav__list__items"><a href="#">Inicio </a></li>
+      </ul> 
+    </nav>
+
+    </section>
     
   <section class="section-items" >
 
