--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -6,47 +6,54 @@ footer {
   min-width: 300px;
   background-color: #0c474b;
   font-family: "Poppins", roboto;
+  @media (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
 
-.footer__items {
-  justify-content: center;
-  align-items: center;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  margin-top: 56px;
+.container {
+  &__items {
+    justify-content: center;
+    align-items: center;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    margin-top: 56px;
 
-  &__title {
-    color: #b6c8c9;
-    font-size: 20px;
-  }
-
-  &__link {
-    font-size: 14px;
-    list-style: none;
-    color: #b6c8c9;
-
-    &__p {
-      font-size: 14px;
+    &__title {
       color: #b6c8c9;
+      font-size: 20px;
+    }
+
+    &__link {
+      font-size: 14px;
+      list-style: none;
+      color: #b6c8c9;
+
+      &__p {
+        font-size: 14px;
+        color: #b6c8c9;
+        list-style: none;
+        text-decoration: none;
+      }
+    }
+
+    &__icon {
+      color: white;
+      width: 24px;
+      height: 26px;
+      display: flex;
+      flex-direction: row;
       list-style: none;
       text-decoration: none;
+      justify-items: center;
     }
-  }
-
-  &__icon {
-    color: white;
-    width: 24px;
-    height: 26px;
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    text-decoration: none;
-    justify-items: center;
   }
 }
 
-.footer__arrow {
+.icon__arrow {
   display: flex;
   justify-content: flex-end;
   width: 24px;
@@ -66,8 +73,18 @@ footer {
     z-index: 2;
   }
 }
-
-/* @media all and (min-width: 900px) {
-    display: flex;
+/*
+@media (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
   }
-  */
+}
+
+@media (min-width: 1200px) {
+  .footer {
+    justify-content: center;
+  }
+}
+*/
