media done in header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -18,14 +18,18 @@
 
     </section>
     
-  <section class="section-items" >
+  <section class="section-logo" >
 
-    <img src="./assets/images/logo.png" alt="Professional Logo" class="section-items__logo" >
+    <img src="./assets/images/logo.png" alt="Professional Logo" class="section-logo-image" >
+
+   </section>  
+
+   <section class="section-text">
     
-    <h2 class="section-items__title">Disfruta creando espacios</h2>
+    <h2 class="section-text__title">Disfruta creando espacios</h2>
   
-    <input class="section-items__button" value="Comprar ahora"/>
-
-  </section>
+    <input class="section-text__button" value="Comprar ahora"/>
+</section>
+ 
 
  </header>
