--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -21,18 +21,35 @@ header {
   display: none;
 }
 
-.section-items {
+.section-logo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  &__logo {
+  &__image {
     display: flex;
     align-items: center;
     justify-content: center;
     justify-items: center;
     padding: 19px 0 64px;
+    @media all and (min-width: 768px) {
+      margin-top: 50px;
+    }
+    @media all and (min-width: 1200px) {
+      margin-top: 50px;
+    }
+  }
+}
+
+.section-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  @media all and (min-width: 768px) {
+    margin-left: 147px;
+    align-items: flex-start;
   }
 
   &__title {
@@ -41,6 +58,14 @@ header {
     font-weight: 600;
     padding-top: 19px;
     padding-bottom: 10px;
+    margin-top: 100px;
+
+    @media all and (min-width: 768px) {
+      margin-top: 100px;
+    }
+    @media all and (min-width: 1200px) {
+      margin-top: 400px;
+    }
   }
 
   &__button {
@@ -54,6 +79,12 @@ header {
     margin-top: 19px;
     margin-bottom: 64px;
     transition: all 0.9s;
+    @media all and (min-width: 768px) {
+      margin-bottom: 100px;
+    }
+    @media all and (min-width: 1200px) {
+      margin-bottom: 463px;
+    }
 
     &:hover {
       background-color: #ff975a;
@@ -68,22 +99,3 @@ header {
   margin-left: 146px;
 }
 */
-@media all and (min-width: 1200px) {
-  .section-menu {
-    display: inline;
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-  .menu-nav {
-    display: inline;
-    flex-direction: row;
-    justify-content: flex-start;
-    &__list {
-      &__items {
-        text-decoration: none;
-        list-style: none;
-        color: #0c474b;
-      }
-    }
-  }
-}
