--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -5,7 +5,7 @@
 .section1 {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 5fr;
+  grid-template-rows: 4fr;
   text-align: center;
   background-color: #f0ebe5;
   color: #0c474b;
@@ -14,10 +14,9 @@
     text-align: center;
     font-size: 24px;
     font-weight: 600;
-    margin-top: 41px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin: 41px 30px 30px 30px;
+    @media (min-width: 768px) {
+    }
   }
 
   &__box {
@@ -47,11 +46,23 @@
   }
 }
 
-/* @media all and (min-width: 768px) {
-    .section1 {
-    }
-    
-    */
+/*@media (min-width: 768px) {
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 172px 105px;
+  grid-template-areas:
+    "title title title"
+    "article article article";
+  grid-gap: 20px;
+
+
+  .title {
+    grid-area: title;
+    {
+  .box{
+    grid-area: article;
+    {    
+} */
 
 .section2 {
   background-color: #ff975a;
