--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -40,6 +40,7 @@
     </section>
     <!-- SECTION 3 MODULO 4 FLEX-->
 
+    <div class="container">
     <section class="section3">
         <div class="wrap">
         <article class="section3__box">
@@ -47,15 +48,14 @@
                 <p class="section3__box__p">Una linea de productos diseñados para todos tus espacios</p>
                 <input class="section3__box__button" type="submit" value="Comprar ahora">
         </article>
-
-
-
         </div>
     </section>    
 
-    <section class="section4">
+    <article class="section4">
     <div class="wrap"> 
             <img class="section4__image" src="./assets/images/creando-espacios.jpg" alt="image of a home bathroom">
-    </section>
+    </article>
+</section> 
+</div>
     </div>  
 </main>
