--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,37 +1,37 @@
 <footer class="footer">
 <div class="wrap"> 
     <div class="container">
-    <nav class="container__items">
-       <h3 class="container__items__title">Tienda</h3>
-        <ul class="container__items__link">
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
-             <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
+    <nav class="container1__items">
+       <h3 class="container1__items__title">Tienda</h3>
+        <ul class="container1__items__link">
+            <li><a class="container1__items__link__p" href="https://adalab.es" target="_blank">Productos</a></li>
+            <li><a class="container1__items__link__p" href="https://adalab.es" target="_blank">Cajoneras</a></li>  
+            <li><a class="container1__items__link__p" href="https://adalab.es" target="_blank">Para toda la casa</a></li>
+             <li><a class="container1__items__link__p" href="https://adalab.es" target="_blank">Habitaciones</a></li>  
             </ul>
     </nav>
 
-    <nav class="container__items">
-        <h3 class="container__items__title">Nosotros</h3> 
-        <ul class="container__items__link">
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
-            <li><a class="container__items__link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
-             <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
+    <nav class="container2__items">
+        <h3 class="container2__items__title">Nosotros</h3> 
+        <ul class="container2__items__link">
+            <li><a class="container2__items__link__p" href="https://adalab.es" target="_blank">Nuestra guía</a></li>
+            <li><a class="container2__items__link__p" href="https://adalab.es"target="_blank">Nuestro diseño</a></li>  
+            <li><a class="container2__items__link__p" href="https://adalab.es" target="_blank">Nuestra historia</a></li>
+             <li><a class="container2__items__link__p" href="https://adalab.es" target="_blank">Ayuda</a></li>  
             </ul>
     </nav>
 
-    <nav class="container__items">
-        <h3 class="container__items__title">Contacto</h3>
-        <ul class="container__items__link">
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
-            <li><a class="container__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
+    <nav class="container3__items">
+        <h3 class="container3__items__title">Contacto</h3>
+        <ul class="containe3r__items__link">
+            <li><a class="container3__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
+            <li><a class="container3__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
         </ul>
 
-        <ul class="container__items__icon">
-            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a class="container__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        <ul class="container3__items__icon">
+            <li><a class="container3__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a class="container3__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="container3__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul> 
 </nav>
 </div>
