new changes in the footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -23,7 +23,7 @@
 
     <nav class="container3__items">
         <h3 class="container3__items__title">Contacto</h3>
-        <ul class="containe3r__items__link">
+        <ul class="containe3r__items__link" style="list-style: none">
             <li><a class="container3__items__link__p" href="https://adalab.es" target="_blank">ayuda@openspaces.com</a></li>
             <li><a class="container3__items__link__p" href="https://adalab.es" target="_blank">Socios</a></li>  
         </ul>
@@ -34,10 +34,17 @@
             <li><a class="container3__items__icon" href="https://adalab.es" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul> 
 </nav>
+<nav class="container4">
+
+  <a href="#"><i class="fa-solid fa-arrow-up container4__icon-arrow" alt="Arrow pointing upwards"></i></a>
+
+</nav>
+
+
 </div>
 
 
-    <a href="#"><i class="fa-solid fa-arrow-up" class="icon-arrow" alt="Arrow pointing upwards"></i></a>
+  
 
  
 
