--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -2,20 +2,31 @@
   font-family: "Poppins", roboto;
 }
 
-.section1 {
+.container-section1 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 4fr;
   text-align: center;
   background-color: #f0ebe5;
   color: #0c474b;
+  @media all and (min-width: 768px) {
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 1fr;
+    grid-template-areas:
+      "section1__title section1__title section1__title"
+      "section1__box section1__box section1__box";
+    grid-gap: 20px;
+  }
 
   &__title {
     text-align: center;
     font-size: 24px;
     font-weight: 600;
     margin: 41px 30px 30px 30px;
-    @media (min-width: 768px) {
+    @media all and (min-width: 768px) {
+      grid-column-start: 1;
+      grid-column-end: 4;
     }
   }
 
@@ -25,6 +36,8 @@
     align-items: center;
     justify-items: center;
     justify-content: center;
+    @media all and (min-width: 768px) {
+    }
 
     &__photo {
       padding-bottom: 47px;
@@ -37,6 +50,10 @@
       text-align: center;
     }
 
+    &__margin {
+      margin: 10px;
+    }
+
     &__p {
       font-size: 16px;
       width: 208px;
@@ -45,24 +62,6 @@
     }
   }
 }
-
-/*@media (min-width: 768px) {
-  margin: 0 auto;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 172px 105px;
-  grid-template-areas:
-    "title title title"
-    "article article article";
-  grid-gap: 20px;
-
-
-  .title {
-    grid-area: title;
-    {
-  .box{
-    grid-area: article;
-    {    
-} */
 
 .section2 {
   background-color: #ff975a;
@@ -113,7 +112,10 @@
 }
 
 .section3 {
-  background-color: #b6c8c9;
+  background-color: #f0ebe5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &__box {
     display: flex;
     flex-direction: column;
@@ -153,10 +155,8 @@
 }
 
 .section4 {
-  &__image {
-    overflow: hidden;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
+  overflow: hidden;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
