--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -23,10 +23,13 @@
     text-align: center;
     font-size: 24px;
     font-weight: 600;
-    margin: 41px 30px 30px 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     @media all and (min-width: 768px) {
       grid-column-start: 1;
       grid-column-end: 4;
+      margin-top: 50px;
+      margin-bottom: 80px;
     }
   }
 
@@ -36,7 +39,10 @@
     align-items: center;
     justify-items: center;
     justify-content: center;
+
     @media all and (min-width: 768px) {
+      margin-top: 50px;
+      margin-bottom: 86px;
     }
 
     &__photo {
@@ -104,7 +110,7 @@
 }
 
 .container {
-  @media all and (min-width: 768px) {
+  @media all and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -116,11 +122,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media all and (min-width: 1200px) {
+      width: 50%;
+    }
 
     &__title {
       color: #0c474b;
