--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -109,28 +109,22 @@
   }
 }
 
-.container {
-  @media all and (min-width: 1200px) {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-
 .section3 {
   background-color: #f0ebe5;
   display: flex;
   align-items: center;
   justify-content: center;
+  @media all and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 
   &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    @media all and (min-width: 1200px) {
-      width: 50%;
-    }
 
     &__title {
       color: #0c474b;
@@ -162,11 +156,10 @@
       }
     }
   }
-}
 
-.section4 {
-  overflow: hidden;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+  &__image {
+    overflow: hidden;
+    object-fit: cover;
+    width: 50%;
+  }
 }
